--- a/index.HTML
+++ b/index.HTML
@@ -28,7 +28,7 @@
     <p> Описание 2 </p>
       </section>
         <aside class="partner">
-        <a href="реклама.html">ТИПО РЕКЛАМА<br>
+        <a href="ad.html">ТИПО РЕКЛАМА<br>
            </a>
 
         </aside>
